--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
